# jira-reporter

./: .gitignore  Cargo.toml
src/: demo.rs  fetch.rs  lib.rs  login.rs  main.rs  query.rs
src/checkers/: analyze.rs  cachecker.rs  caissue.rs  caitem.rs  datatypes.rs  fs2checker.rs  fs2issue.rs  fschecker.rs  issue.rs  mod.rs  persist.rs  records.rs  search.rs  utils.rs
src/checkers/ca/: cachecker.rs  caissue.rs  caitem.rs  carecords.rs  mod.rs  pipeline.rs  timeline.rs
src/checkers/fs2/: fs2checker.rs  fs2issue.rs  fs2item.rs  mod.rs
src/checkers/sys/: mod.rs  syschecker.rs  sysissue.rs  sysitem.rs
src/fetch/: fetch.rs  fetcher.rs  login.rs  mod.rs
src/query/: batch.rs  issue.rs  mod.rs  query.rs  result.rs
