[package]
name = "jira_reporter"
version = "0.1.0"
authors = ["fei.yan@nokia-sbell.com"]

[dependencies]
serde = {version = "1.0", features = ["rc"]}
serde_json = "1.0"
serde_derive = "1.0"

futures = "0.1"
hyper = "0.11.24"
hyper-proxy = "0.4.1"
tokio-core = "0.1.17"

log = "0.4.3"
flexi_logger = "0.9.2"

rpassword = "2.0.0"
hex = "0.3.2"

itertools = "0.7"